--- a/frontend/src/views/Main/view-stacks/ImageDetailView/SideDrawer/MetaTagPanel/style.module.scss
+++ b/frontend/src/views/Main/view-stacks/ImageDetailView/SideDrawer/MetaTagPanel/style.module.scss
@@ -9,7 +9,7 @@
   $padding: 0.75rem;
   $top-height: 3rem;
   > .top {
-    $real-height: 2.25rem;
+    $real-height: 2.5rem;
     position: absolute;
     top: #{$padding + $top-height - $real-height}; left: $padding; right: $padding; height: $real-height;
     box-sizing: border-box;
@@ -24,6 +24,7 @@
     top: #{$top-height + $padding}; left: $padding; right: 50%; bottom: 0;
     overflow-y: auto;
     padding: 1rem;
+    width: 100%; height: 100%;
     > .tag-item {
       margin-bottom: 0.125rem;
     }
@@ -53,9 +54,6 @@
 
       > .tag-item {
         margin-bottom: 0.125rem;
-        > :first-child {
-          margin-right: 0.125rem;
-        }
       }
     }
   }
