--- a/frontend/src/layouts/layouts/SideLayout/style.module.scss
+++ b/frontend/src/layouts/layouts/SideLayout/style.module.scss
@@ -18,7 +18,7 @@
     top: 0;
     bottom: 0;
     left: 0;
-    transition: transform 0.4s ease;
+    transition: transform 0.4s ease, visibility 0.4s;
   }
   //拖拽区域的布局定位
   > .resize-content {
