feat(frontend/meta-tag-editor): 撤销/重做功能; 标签约束结果显示; 保存

--- a/frontend/src/views/Main/view-stacks/ImageDetailView/SideDrawer/MetaTagPanel/style.module.scss
+++ b/frontend/src/views/Main/view-stacks/ImageDetailView/SideDrawer/MetaTagPanel/style.module.scss
@@ -34,7 +34,9 @@
       }
     }
     > .notification-list {
-
+      max-height: 5rem;
+      overflow-y: auto;
+      font-size: $font-size-small;
     }
     > .tool-bar {
       margin: $spacing-1 $spacing-4 $spacing-4 $spacing-1;
