--- a/frontend/src/views/Main/view-stacks/ImageDetailView/SideDrawer/MetaTagPanel/style.module.scss
+++ b/frontend/src/views/Main/view-stacks/ImageDetailView/SideDrawer/MetaTagPanel/style.module.scss
@@ -17,6 +17,20 @@
     @media (prefers-color-scheme: dark) {
       border-bottom-color: $deep-sidebar-dm;
     }
+
+    > .tagme-editor {
+      display: inline-block;
+      float: right;
+      margin-right: 1.25rem;
+      line-height: $height-std;
+      align-items: baseline;
+      font-size: $font-size-small;
+
+      > label {
+        margin-left: 0.75rem;
+        font-size: $font-size-small;
+      }
+    }
   }
 
   > .left-column {
@@ -67,6 +81,40 @@
 
       > .tag-item {
         margin-bottom: 0.125rem;
+      }
+    }
+    > .meta-database.tag {
+      height: 100%;
+      overflow-y: auto;
+      padding: 0.75rem 0 0.75rem 0.75rem;
+
+      .child-node-list {
+        display: flex;
+
+        &.inline {
+          padding-top: 0.125rem;
+          flex-wrap: wrap;
+
+          > .child {
+            margin-top: 0.125rem;
+            margin-bottom: 0.125rem;
+            margin-right: 0.25rem;
+          }
+        }
+
+        &:not(.inline) {
+          padding-top: 0.25rem;
+          flex-wrap: nowrap;
+          flex-direction: column;
+
+          > .child {
+            margin-bottom: 0.25rem;
+
+            > p {
+              display: inline-flex;
+            }
+          }
+        }
       }
     }
   }
