--- a/frontend/src/styles/base/size.sass
+++ b/frontend/src/styles/base/size.sass
@@ -32,7 +32,7 @@ $spacing-8: 2rem
 $spacing-10: 2.5rem
 $spacing-12: 3rem
 
-$spacing-map: ("0" $spacing-0, "f" $spacing-half, "1" $spacing-1, "2" $spacing-2, "3" $spacing-3, "4" $spacing-4, "5" $spacing-5, "6" $spacing-6, "7" $spacing-7, "8" $spacing-8, "10" $spacing-10, "12" $spacing-12)
+$spacing-map: ("0" $spacing-0, "half" $spacing-half, "1" $spacing-1, "2" $spacing-2, "3" $spacing-3, "4" $spacing-4, "5" $spacing-5, "6" $spacing-6, "7" $spacing-7, "8" $spacing-8, "10" $spacing-10, "12" $spacing-12)
 
 /*圆角大小*/
 $radius-size-small: 3px
