--- a/frontend/src/styles/components/group.sass
+++ b/frontend/src/styles/components/group.sass
@@ -1,10 +1,7 @@
 @import "../base/size"
 
 .group
-  > input,
-  > button,
-  > a,
-  > span
+  > *
     margin-bottom: $spacing-1
     display: inline-block
     vertical-align: super
@@ -12,10 +9,7 @@
       margin-right: $spacing-2
 
 .single-line-group
-  > input,
-  > button,
-  > a,
-  > span
+  > *
     display: inline-block
     vertical-align: super
     &:not(:last-child)
