--- a/frontend/src/views/Main/view-stacks/ImageDetailView/SideDrawer/MetaTagPanel/style.module.scss
+++ b/frontend/src/views/Main/view-stacks/ImageDetailView/SideDrawer/MetaTagPanel/style.module.scss
@@ -43,6 +43,14 @@
       height: 100%;
       overflow-y: auto;
       padding: 1rem 0 1rem 1rem;
+
+      > .tag-item {
+        display: flex;
+        margin-bottom: 0.2rem;
+        > .close-button {
+          margin-left: 0.2rem;
+        }
+      }
     }
     > .notification-list {
       max-height: 5rem;
@@ -77,42 +85,13 @@
       padding: 0.75rem 0 0.75rem 0.75rem;
 
       > .tag-item {
-        margin-bottom: 0.125rem;
+        margin-bottom: 0.2rem;
       }
     }
     > .meta-database.tag {
       height: 100%;
       overflow-y: auto;
       padding: 0.75rem 0 0.75rem 0.75rem;
-
-      .child-node-list {
-        display: flex;
-
-        &.inline {
-          padding-top: 0.125rem;
-          flex-wrap: wrap;
-
-          > .child {
-            margin-top: 0.125rem;
-            margin-bottom: 0.125rem;
-            margin-right: 0.25rem;
-          }
-        }
-
-        &:not(.inline) {
-          padding-top: 0.25rem;
-          flex-wrap: nowrap;
-          flex-direction: column;
-
-          > .child {
-            margin-bottom: 0.25rem;
-
-            > p {
-              display: inline-flex;
-            }
-          }
-        }
-      }
     }
   }
 }
