--- a/frontend/src/layouts/data/TagTree/style.module.scss
+++ b/frontend/src/layouts/data/TagTree/style.module.scss
@@ -63,27 +63,35 @@
   }
 }
 
-//标签节点中的drop area内容
-.drop-area {
-  border-bottom-left-radius: $radius-size-small;
-  border-bottom-right-radius: $radius-size-small;
-  position: absolute;
-  width: 100%;
-  height: 35%;
-  bottom: 0;
-  left: 0;
-  text-align: center;
-  &.is-dragover {
-    background-color: rgba(0, 0, 0, 0.25);
+:global(.tag) {
+  &.not-cursor-pointer {
+    cursor: default;
   }
-  > :global(.fa) {
-    transform: translateY(-0.4em);
+  &:not(.not-cursor-pointer) {
+    cursor: pointer;
   }
-}
-.transparent-hit-area {
-  position: absolute;
-  border-radius: $radius-size-small;
-  left: 0; top: 0;
-  width: 100%;
-  height: 100%;
+  //标签节点中的drop area内容
+  .drop-area {
+    border-bottom-left-radius: $radius-size-small;
+    border-bottom-right-radius: $radius-size-small;
+    position: absolute;
+    width: 100%;
+    height: 35%;
+    bottom: 0;
+    left: 0;
+    text-align: center;
+    &.is-dragover {
+      background-color: rgba(0, 0, 0, 0.25);
+    }
+    > :global(.fa) {
+      transform: translateY(-0.4em);
+    }
+  }
+  .transparent-hit-area {
+    position: absolute;
+    border-radius: $radius-size-small;
+    left: 0; top: 0;
+    width: 100%;
+    height: 100%;
+  }
 }
