--- a/frontend/src/views/Main/view-stacks/ImageDetailView/SideDrawer/MetaTagPanel/style.module.scss
+++ b/frontend/src/views/Main/view-stacks/ImageDetailView/SideDrawer/MetaTagPanel/style.module.scss
@@ -89,9 +89,26 @@
       }
     }
     > .meta-database.tag {
+      position: relative;
       height: 100%;
       overflow-y: auto;
       padding: 0.75rem 0 0.75rem 0.75rem;
+
+      > .search-panel {
+        position: absolute;
+        height: 100%; width: 100%;
+        left: 0; top: 0;
+        padding: 0.75rem 0 0.75rem 0.75rem;
+
+        background-color: $bg;
+        @media (prefers-color-scheme: dark) {
+          background-color: $bg-dm;
+        }
+
+        > .search-item {
+          margin-bottom: 0.2rem;
+        }
+      }
     }
   }
 }
