refactor(frontend/meta-tag-callout): 基本完成meta tag浮动预览框

--- a/frontend/src/styles/utils/display.sass
+++ b/frontend/src/styles/utils/display.sass
@@ -8,6 +8,12 @@
 .is-overflow-hidden
   overflow: hidden
 
+.is-overflow-auto
+  overflow: auto
+
+.is-overflow-y-auto
+  overflow-y: auto
+
 .is-cursor-pointer
   cursor: pointer
 .is-cursor-default
