feat(frontend): 完成dialog box组件抽离

--- a/frontend/src/styles/base/size.sass
+++ b/frontend/src/styles/base/size.sass
@@ -38,9 +38,10 @@ $spacing-map: ("0" $spacing-0, "half" $spacing-half, "1" $spacing-1, "2" $spacin
 $radius-size-small: 3px
 $radius-size-std: 5px
 $radius-size-large: 7px
+$radius-size-very-large: 11px
 $radius-size-circle: 290486px
 
-$radius-size-map: ("small" $radius-size-small, "large" $radius-size-large, "circle" $radius-size-circle)
+$radius-size-map: ("small" $radius-size-small, "large" $radius-size-large, "very-large" $radius-size-very-large, "circle" $radius-size-circle)
 
 /*元素标准高度*/
 $height-small: 1.625rem
