--- a/frontend/src/layouts/data/IllustGrid/style.module.scss
+++ b/frontend/src/layouts/data/IllustGrid/style.module.scss
@@ -29,11 +29,17 @@
       margin: 1px;
       //被选中
       &.selected {
-        border: solid 3px blue;
+        border: solid 3px rgb(0, 99, 255);
+        @media (prefers-color-scheme: dark) {
+          border-width: 2px;
+        }
         > div {
           width: 100%; height: 100%;
           box-sizing: border-box;
           border: solid 1px $white;
+          @media (prefers-color-scheme: dark) {
+            border-color: $black;
+          }
         }
       }
     }
