feat(frontend/illust-grid): 添加illust批量拖拽功能

--- a/frontend/src/views/Main/view-stacks/ImageDetailView/SideBar/style.module.scss
+++ b/frontend/src/views/Main/view-stacks/ImageDetailView/SideBar/style.module.scss
@@ -46,6 +46,7 @@
       margin-top: 0.25rem;
       text-align: center;
       position: relative;
+      cursor: pointer;
       > img {
         width: 100%;
         min-height: 4rem;
