feat(frontend/meta-tag-editor): 添加suggest tab的数据、结果展示、选择器

--- a/frontend/src/styles/components/tag.sass
+++ b/frontend/src/styles/components/tag.sass
@@ -22,6 +22,10 @@
   &.is-large
     font-size: $font-size-large
 
+  &.square
+    width: 2em
+    padding: 0
+
   .tag-button
     color: inherit
     &:hover
