--- a/frontend/src/layouts/drawers/MetaTagEditor/style.module.scss
+++ b/frontend/src/layouts/drawers/MetaTagEditor/style.module.scss
@@ -110,5 +110,22 @@
         }
       }
     }
+
+    > .suggest {
+      height: 100%;
+      overflow-y: auto;
+      padding: 0.75rem 0 0.75rem 0.75rem;
+
+      > .tag-item {
+        margin-bottom: 0.2rem;
+        :global(.tag) {
+          transform: translateY(-1px);
+        }
+      }
+    }
+
+    > .tool-bar {
+      margin: $spacing-1 $spacing-4 $spacing-4 $spacing-1;
+    }
   }
 }
