--- a/frontend/src/views/Main/Tags/style.module.scss
+++ b/frontend/src/views/Main/Tags/style.module.scss
@@ -150,6 +150,7 @@
   }
   .examples {
     margin-top: 1rem;
+    margin-bottom: 1rem;
     .example-list {
       display: flex;
       flex-wrap: wrap;
@@ -168,6 +169,37 @@
           object-fit: cover;
           object-position: 50% 50%;
           box-shadow: 0.1em 0.1em 0.25em rgba(0, 0, 0, 0.1);
+        }
+        > .delete-button {
+          position: absolute;
+          right: 0.25rem; bottom: 0.25rem;
+        }
+      }
+      > .drop-area {
+        position: relative;
+        height: 0;
+        width: 100%;
+        padding-top: 25%;
+        padding-bottom: 25%;
+        > div {
+          position: absolute;
+          border-radius: 6px;
+          top: 0; left: 0;
+          width: 100%;
+          height: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background-color: $shallow-bg;
+          &.dropping {
+            background-color: $deep-sidebar;
+          }
+          @media (prefers-color-scheme: dark) {
+            background-color: $shallow-bg-dm;
+            &.dropping {
+              background-color: $deep-sidebar-dm;
+            }
+          }
         }
       }
     }
