--- a/frontend/src/layouts/editors/SourceEditors.module.scss
+++ b/frontend/src/layouts/editors/SourceEditors.module.scss
@@ -2,19 +2,16 @@
 .source-tag-editor {
   width: 100%;
   min-height: 3rem;
-  max-height: 6rem;
-  position: relative;
+  display: flex;
+  flex-wrap: nowrap;
 
   > .list {
-    position: absolute;
-    left: 0; top: 0;
-    height: 100%; width: 60%;
+    width: 60%;
+    max-height: 6rem;
     overflow-y: auto;
     padding: 0.5rem;
   }
   > .editor {
-    position: absolute;
-    right: 0; top: 0;
-    height: 100%; width: 40%;
+    width: 40%;
   }
 }
