--- a/frontend/src/views/Main/Tags/style.module.scss
+++ b/frontend/src/views/Main/Tags/style.module.scss
@@ -148,6 +148,9 @@
   .score {
     margin-top: 1rem;
   }
+  .mapping-source-tags {
+    margin-top: 1rem;
+  }
   .examples {
     margin-top: 1rem;
     margin-bottom: 1rem;
