--- a/frontend/src/layouts/drawers/MetaTagEditor/style.module.scss
+++ b/frontend/src/layouts/drawers/MetaTagEditor/style.module.scss
@@ -128,6 +128,14 @@
       height: 100%;
       overflow-y: auto;
       padding: 0.5rem 0 0.5rem 0.75rem;
+
+      .mapping-editor {
+        padding: 0.25rem;
+        max-width: 14rem;
+        > .empty {
+          height: 1rem;
+        }
+      }
     }
 
     > .tool-bar {
