feat(frontend/partition): 添加时间分区的时间线和日历模式页面

--- a/frontend/src/styles/utils/format.sass
+++ b/frontend/src/styles/utils/format.sass
@@ -83,6 +83,9 @@
   text-align: center
 .has-text-right
   text-align: right
+//文本下划线
+.has-text-underline
+  text-decoration: underline
 
 //文本不换行功能
 .no-wrap
