feat(frontend/album): 添加album API定义；添加列表页基本框架和定义

--- a/frontend/src/views/Main/Tags/style.module.scss
+++ b/frontend/src/views/Main/Tags/style.module.scss
@@ -231,6 +231,9 @@
     overflow-y: auto;
     > .result-item {
       margin-bottom: 0.25rem;
+      > .selected {
+        border: solid 1px $link;
+      }
     }
   }
 }
