--- a/frontend/src/layouts/web-modules/NotificationModule/style.module.scss
+++ b/frontend/src/layouts/web-modules/NotificationModule/style.module.scss
@@ -6,7 +6,6 @@
   position: fixed;
   top: 0; right: 0;
   margin-top: 46px;
-  margin-right: 12px;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -16,7 +15,7 @@
   .item {
     margin-bottom: 0.5rem;
     width: fit-content;
-    min-width: 4rem;
+    min-width: 5rem;
     max-width: 36rem;
     pointer-events: auto;
 
@@ -40,7 +39,9 @@
 
     background-color: $bg;
     border: 1px solid $deep-light;
-    border-radius: $radius-size-small;
+    border-right-width: 0;
+    border-top-left-radius: $radius-size-small;
+    border-bottom-left-radius: $radius-size-small;
     box-shadow: 0.1em 0.1em 0.25em rgba(0, 0, 0, 0.2);
 
     @media (prefers-color-scheme: dark) {
@@ -74,14 +75,18 @@
     }
 
     > .title-content {
-      padding: 0 0.125rem 0 0.5rem;
+      padding: 0.125rem 0.125rem 0.125rem 0.5rem;
       font-size: $font-size-small;
       > .close-button {
         float: right;
+        visibility: hidden;
+        &.show {
+          visibility: visible;
+        }
       }
     }
     > .content {
-      padding: 2px 4px;
+      padding: 0.25rem 0.5rem;
       font-size: $font-size-small;
     }
   }
