feat(frontend/folder): 扩充上下文结构; 添加详情侧栏

--- a/frontend/src/layouts/layouts/SplitPane/style.module.scss
+++ b/frontend/src/layouts/layouts/SplitPane/style.module.scss
@@ -32,6 +32,12 @@
 .pane-basic-layout {
   $main-padding-top: $spacing-1;
   height: 100%;
+
+  border-left: solid 1px $deep-sidebar;
+  @media (prefers-color-scheme: dark) {
+    border-left-color: $deep-sidebar-dm;
+  }
+
   > button {
     position: absolute;
     right: $spacing-1;
