--- a/frontend/src/layouts/dialogs/AddToCollectionDialog/style.module.scss
+++ b/frontend/src/layouts/dialogs/AddToCollectionDialog/style.module.scss
@@ -14,27 +14,7 @@
   > .scroll-content {
     height: 100%;
     overflow-y: auto;
-    //列数
-    $column-number: 7;
-    display: flex;
-    flex-wrap: wrap;
-    margin-right: #{-$spacing-1};
-    //一个img项目，使用width和padding-bottom锁定长宽比
-    > .item {
-      position: relative;
-      height: 0;
-      width: #{percentage(1 / $column-number)};
-      padding-bottom: #{percentage(1 / $column-number)};
-      //内层img绝对定位以应用长宽比
-      > img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: calc(100% - #{$spacing-1});
-        height: calc(100% - #{$spacing-1});
-        object-fit: cover;
-        object-position: 50% 50%;
-      }
+    .item {
       > .checkbox {
         position: absolute;
         right: 0; bottom: 0;
