--- a/frontend/src/layouts/dialogs/AddToCollection/style.module.scss
+++ b/frontend/src/layouts/dialogs/AddToCollection/style.module.scss
@@ -14,6 +14,7 @@
   > .scroll-content {
     height: 100%;
     overflow-y: auto;
+    overflow-x: hidden;
     .item {
       > .checkbox {
         position: absolute;
