--- a/frontend/src/layouts/dialogs/CreatingCollection/style.module.scss
+++ b/frontend/src/layouts/dialogs/CreatingCollection/style.module.scss
@@ -12,6 +12,7 @@
   > .scroll-content {
     height: 100%;
     overflow-y: auto;
+    overflow-x: hidden;
 
     > .item {
       padding: 0.75rem 0.5rem 0.75rem 0.75rem;
