--- a/frontend/src/layouts/dialogs/EditSourceImage/style.module.scss
+++ b/frontend/src/layouts/dialogs/EditSourceImage/style.module.scss
@@ -1,11 +1,9 @@
 @import '@/styles/base/size.sass';
-@import '@/styles/base/color.scss';
 
 .content {
   padding: 0.5rem;
-  max-height: 45rem;
-  min-height: 10rem;
-  width: 50rem;
+  height: 35rem;
+  width: 40rem;
 
   display: flex;
   flex-direction: column;
@@ -14,8 +12,16 @@
   > .scroll-content {
     height: 100%;
     overflow-y: auto;
+    overflow-x: hidden;
   }
+
   > .bottom {
     padding-top: 0.5rem;
+    padding-bottom: 0.25rem;
+  }
+
+  > .center-board {
+    text-align: center;
+    padding: 1rem 0;
   }
 }
