feat(frontend/folder): folder pin功能、项目示例等功能补全

--- a/frontend/src/layouts/web-modules/NotificationModule/style.module.scss
+++ b/frontend/src/layouts/web-modules/NotificationModule/style.module.scss
@@ -76,7 +76,7 @@
 
     > .title-content {
       padding: 0.125rem 0.125rem 0.125rem 0.5rem;
-      font-size: $font-size-small;
+      font-size: $font-size-std;
       > .close-button {
         float: right;
         visibility: hidden;
@@ -87,7 +87,7 @@
     }
     > .content {
       padding: 0.25rem 0.5rem;
-      font-size: $font-size-small;
+      font-size: $font-size-std;
     }
   }
 }
