--- a/frontend/src/styles/utils/layout.sass
+++ b/frontend/src/styles/utils/layout.sass
@@ -8,6 +8,8 @@
     position: fixed !important
 .absolute
     position: absolute !important
+.relative
+    position: relative !important
 
 .fixed,
 .absolute
