--- a/frontend/src/styles/utils/format.sass
+++ b/frontend/src/styles/utils/format.sass
@@ -80,9 +80,9 @@
 
 //文本对齐位置
 .has-text-centered
-  text-align: center
+  text-align: center !important
 .has-text-right
-  text-align: right
+  text-align: right !important
 //文本下划线
 .has-text-underline
   text-decoration: underline
