feat(frontend/clone-image): 完成cloneImage功能UI和实现

--- a/frontend/src/styles/utils/layout.sass
+++ b/frontend/src/styles/utils/layout.sass
@@ -52,6 +52,9 @@
 .float-left
     float: left
 
+.is-inline-block
+    display: inline-block
+
 @each $name, $size in $spacing-map
     .m-#{$name}
         margin: $size
