--- a/frontend/src/layouts/data/IllustGrid/style.module.scss
+++ b/frontend/src/layouts/data/IllustGrid/style.module.scss
@@ -1,7 +1,7 @@
 @import '@/styles/base/size.sass';
 @import '@/styles/base/color.scss';
 
-.root {
+.grid {
   position: relative;
   width: 100%; height: 100%;
 
@@ -97,17 +97,92 @@
       padding: #{percentage(0.5 / $col)} 0
     }
   }
+}
 
-  > .selected-count-tag {
-    position: absolute;
-    right: 0; top: 0;
-    margin-top: 0.75rem;
-    margin-right: 0.75rem;
-    padding: 0.15rem 0.6rem;
-    border-radius: $radius-size-std;
-    font-weight: bold;
-    color: $literal-dm;
-    background-color: rgba(0, 0, 0, 0.65);
-    box-shadow: 0 0 6px rgba(0, 0, 0, 0.65);
+.row-list {
+  position: relative;
+  width: 100%; height: 100%;
+
+  .item {
+    $item-height: 32px;
+    $item-padding: 2px;
+    height: $item-height;
+    line-height: $item-height;
+    padding: $item-padding 0.25rem;
+    width: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    box-sizing: border-box;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+    &.selected {
+      background-color: $link;
+      color: $white;
+    }
+    > .img {
+      width: #{$item-height - $item-padding * 2};
+      flex-shrink: 0;
+      > img {
+        object-fit: cover;
+        object-position: center;
+        width: 100%; height: 100%;
+      }
+    }
+    > .title {
+      padding-left: 0.25rem;
+    }
+    &.import-image > .title {
+      width: 40%;
+    }
+    &.illust > .title {
+      width: 25%;
+    }
+    > .children-count {
+      width: 3.5rem;
+      flex-shrink: 0;
+    }
+    > .favorite {
+      width: 1.5rem;
+      flex-shrink: 0;
+      text-align: center;
+    }
+    > .score {
+      width: 10%;
+      flex-shrink: 0;
+      text-align: center;
+    }
+    > .tagme {
+      width: 7rem;
+      flex-shrink: 0;
+    }
+    > .source {
+      width: 30%;
+      padding-left: 0.5rem;
+    }
+    > .time {
+      text-align: right;
+      padding-right: 0.25rem;
+    }
+    &.import-image > .time {
+      width: 30%;
+    }
+    &.illust > .time {
+      width: 20%;
+    }
   }
+}
+
+.selected-count-tag {
+  position: absolute;
+  right: 0; top: 0;
+  margin-top: 0.75rem;
+  margin-right: 0.75rem;
+  padding: 0.15rem 0.6rem;
+  border-radius: $radius-size-std;
+  font-weight: bold;
+  color: $literal-dm;
+  background-color: rgba(0, 0, 0, 0.65);
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.65);
 }
