feat(frontend/illust): 完成侧边栏的全部内容，并应用到所有视图

--- a/frontend/src/layouts/data/Dataset/style.module.scss
+++ b/frontend/src/layouts/data/Dataset/style.module.scss
@@ -210,3 +210,29 @@
   background-color: rgba(0, 0, 0, 0.65);
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.65);
 }
+
+.pane-detail-content {
+  .top {
+    margin-top: 1.75rem;
+  }
+  .filename {
+    font-size: $font-size-medium;
+    margin-bottom: 0.25rem;
+    word-wrap: anywhere;
+  }
+  .separator {
+    border-top: solid 1px $deep-sidebar;
+    @media (prefers-color-scheme: dark) {
+      border-top-color: $deep-sidebar-dm;
+    }
+    width: 100%;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+  .spacing {
+    margin-top: 0.5rem;
+  }
+  .char-2-left {
+    padding-left: 2em;
+  }
+}
