feat(frontend/source): 配合pools结构的调整

--- a/frontend/src/styles/components/input.sass
+++ b/frontend/src/styles/components/input.sass
@@ -38,6 +38,15 @@ textarea
   &:focus
     box-shadow: 0 0 3px $deep-sidebar
 
+  &.is-width-25
+    max-width: 25%
+    width: 25%
+  &.is-width-50
+    max-width: 50%
+    width: 50%
+  &.is-width-75
+    max-width: 75%
+    width: 75%
   &.is-fullwidth
     max-width: 100%
     width: 100%
