--- a/frontend/src/views/Main/FindSimilar/style.module.scss
+++ b/frontend/src/views/Main/FindSimilar/style.module.scss
@@ -35,8 +35,10 @@
   padding: 0.5rem;
   max-height: 35rem;
   min-height: 5rem;
-  width: 56rem;
+  width: 60rem;
 
+  display: flex;
+  flex-wrap: nowrap;
   > .info-content {
     width: 100%;
     max-height: 100%;
@@ -45,7 +47,7 @@
   }
   > .action-content {
     flex-shrink: 0;
-    width: 12rem;
+    width: 12.5rem;
     padding-left: 0.5rem;
 
     display: flex;
@@ -55,6 +57,7 @@
       height: 100%;
       overflow-y: auto;
       overflow-x: hidden;
+      padding: 0.5rem;
     }
     > .bottom {
       flex-shrink: 0;
