fix(frontend): 修复opacity css的问题

--- a/frontend/src/components/elements/ThumbnailImage.module.scss
+++ b/frontend/src/components/elements/ThumbnailImage.module.scss
@@ -19,7 +19,7 @@
     position: absolute;
     right: 0.35rem;
     top: 0.35rem;
-    opacity: 75%;
+    opacity: 0.75;
     border-radius: $radius-size-std;
     > i {
       margin-right: 0.25rem;
